Refactor backend to remove Supabase integration: Updated database configuration to use PostgreSQL directly, enhancing performance and simplifying dependency management. Removed Supabase-related code and scripts, including migration and seeding files, while ensuring all database interactions are handled through the PostgreSQL client. Updated role management across controllers and routes to reflect new role definitions, improving access control and user experience.

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
     "test": "jest",
     "migrate": "node database/supabaseMigrate.js migrate",
     "migrate:status": "node database/supabaseMigrate.js status",
+    "migrate:encryption": "node database/apply_encryption_migration.js",
     "seed": "node database/supabaseSeed.js seed",
     "seed:clear": "node database/supabaseSeed.js clear",
     "db:setup": "npm run migrate && npm run seed",
@@ -27,7 +28,6 @@
   "author": "PGIMER Team",
   "license": "MIT",
   "dependencies": {
-    "@supabase/supabase-js": "^2.58.0",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
